<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/arcContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/tes"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/detailPoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/poster_image"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="270dp"
                android:layout_marginEnd="20dp"
                app:layout_anchor="@id/tes"
                app:layout_anchorGravity="bottom|right"
                android:clickable="true"
                app:srcCompat="@drawable/fab_off"
                android:contentDescription="@string/fabContentDesc" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arcContainer">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/poster_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/detailCircleImage"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:scaleType="fitXY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/poster_image_detail" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/release_date"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/poster_container"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/red_400"
                app:layout_constraintStart_toEndOf="@+id/poster_container"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/dummy_text" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/desc"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster_container" />

            <TextView
                android:id="@+id/detailDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                android:padding="2dp"
                android:textColor="@color/subtitle"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc"
                tools:text="@string/dummy_text" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateRelease" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/grey_400"
                android:textColor="@color/white"
                android:padding="3dp"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@+id/poster_container"
                app:layout_constraintTop_toBottomOf="@+id/dateRelease"
                tools:text="@string/dummy_text" />

            <TextView
                android:id="@+id/dateRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="2dp"
                android:textColor="@color/subtitle"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/poster_container"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="@string/dummy_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>