<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbarFave"
        android:icon="@drawable/fav_icon"
        app:showAsAction="always"
        android:title="@string/favourite_menu">
    </item>
</menu>