<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_movie"
        android:checked="true"
        android:color="@color/red_400"
        android:icon="@drawable/movie_icon"
        android:title="@string/title_movie" />

    <item
        android:id="@+id/menu_tv"
        android:color="@color/red_400"
        android:icon="@drawable/tv_icon"
        android:title="@string/title_tv" />


</menu>